# RT

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  README.md  anim__reset_8c.html  anim__reset_8c__incl.map  anim__reset_8c__incl.md5  anim__set_8c.html  anim__set_8c__incl.map  anim__set_8c__incl.md5  anim__toolbox_8c.html  anim__toolbox_8c__incl.map  anim__toolbox_8c__incl.md5  anim__tools_8c.html  anim__tools_8c__incl.map  anim__tools_8c__incl.md5  animate_8c.html  animate_8c__incl.map  animate_8c__incl.md5  animate_8h.html  animate_8h__dep__incl.map  animate_8h__dep__incl.md5  animate_8h__incl.map  animate_8h__incl.md5  animate_8h_source.html  annotated.html  auteur  basic.mk  basic_app.mk  basic_lib.mk  basic_runner.mk  camera_8c.html  camera_8c__incl.map  camera_8c__incl.md5  cast_8c.html  cast_8c__incl.map  (+789 more)
docs/: TODO.txt  archives.c  material_list.txt  test_pool_render.c
includes/: animate.h  config.h  data_struct.h  export.h  ft_unit_test.h  interface.h  libui.h  parse.h  perlin.h  render.h  rt.h  t_cluster.h  t_data.h  t_gui.h  t_scene.h  t_settings.h  tools.h
lib/imgui_impl/: CMakeLists.txt  FindSDL2.cmake  Makefile  imgui_impl_sdl.h
lib/imgui_impl/includes/: imgui_impl_opengl2.h
lib/libft/: .gitignore  .travis.yml  Makefile  README.md  auteur  main.c  printf_main.c
lib/libft/docs/: LICENSE  changelog.md
lib/libft/includes/: ft_conv.h  ft_printf.h  ftconvert.h  ftctype.h  ftgnl.h  ftio.h  ftlist.h  ftmath.h  ftmem.h  ftstring.h  libft.h
lib/libft/oldprintf/: digits_precision.c  digits_precision_spec.c  exceptions_func.c  flags.c  ft_printf.h  length.c  path.c  pick_f_base.c  pick_f_bigs.c  pick_f_c.c  pick_f_d.c  pick_f_p.c  pick_f_percent.c  pick_f_s.c  pick_f_u_int.c  pick_f_w.c  precision.c  printf.c  string.c  to_base.c  write_str.c
lib/libft/srcs/: ft_abs.c  ft_absf.c  ft_atof.c  ft_atoi.c  ft_atoi_base.c  ft_btw.c  (+116 more)
lib/librt/: CMakeLists.txt  Makefile
lib/librt/includes/: color.h  csg.h  librt.h  rtstruct.h
lib/librt/srcs/: color_add.c  color_bool.c  color_clamp.c  color_cpy.c  color_linear_inter.c  color_max.c  color_mult.c  color_scalar.c  color_sub.c  colortoi.c  fresnel.c  inter_cone.c  inter_csg.c  inter_csg_inside.c  inter_csg_op.c  inter_csg_spe.c  inter_cube.c  inter_cylinder.c  inter_find.c  inter_plane.c  inter_plane_finite.c  inter_set.c  inter_setdeflect.c  inter_setlight.c  inter_setrefract.c  inter_sphere.c  inter_tore.c  itocolor.c  mat3.c  mat3_rot.c  mat_orbit.c  mat_transpose.c  normal_cone.c  normal_cube.c  normal_cylinder.c  normal_plane.c  normal_sphere.c  normal_tore.c  print_matrix.c  ray_new.c  (+21 more)
lib/libui/: CMakeLists.txt  Makefile  main.c  makefile  test_pool_render.c
lib/libui/includes/: color.h  libui.h
lib/libui/srcs/: color_add.c  color_scalar.c  color_sub.c  colortoi.c  exit_sdl.c  init_mthr_sdl.c  init_sdl.c  itocolor.c  loop_sdl.c  putcolor_sdl.c  putpixel_sdl.c  render_fullscreen.c  render_mthr_sdl.c  render_pool.c  render_sdl.c  save_screenshot.c
resources/: materialList.csv  new_scene.rt
resources/built/: Info.plist  fe_icon.icns
resources/script/: banner.txt  install_sdl.sh
resources/textures/: 1k_mars.ppm  nihuynh.ppm  sklepper.ppm  tdarchiv.ppm  uv_checker.ppm
scenes/: 3dtexture.rt  atom.rt  auteurs.rt  bite.rt  brick.rt  cone.rt  corridor.rt  csg.rt  csg2.rt  csg_cone.rt  csg_cube.rt  csg_cyl.rt  csg_glass.rt  csg_inter.rt  csg_neg.rt  csg_not.rt  csg_plane.rt  csg_union.rt  cube.rt  cube2.rt  cut.rt  cylinder.rt  diapo.rt  double_orbit.rt  earth.rt  earth_sun.rt  empty.rt  fig1.rt  fig1_bis.rt  fig2.rt  fig3.rt  fig4.rt  fig5.rt  fig7.rt  france.rt  in_sphere.rt  material.rt  mix.rt  orbit_link.rt  pillars.rt  (+21 more)
scenes/error_scenes/: missing_bracket.rt  missing_mat.rt  missing_obj.rt  missing_tex.rt
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  defines_10.js  defines_11.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  (+70 more)
srcs/: camera.c  cast.c  csg.c  error.c  init.c  interface.c  interface_colors.c  key_mapping.c  light.c  main.c  parse_toolbox.c  parser.c  read.c  render.c  setter.c  test.c  texture.c  update.c  utils.c
srcs/interface/: anim_reset.c  anim_set.c  anim_toolbox.c  anim_tools.c  delete_obj.c  fullscreen.c  init_interface.c  interface.c  interface_colors.c  interface_export.c  interface_lists.c  interface_menu.c  interface_objects.c  interface_scene.c  interface_tools.c  interface_windows.c  new_cluster.c  new_object.c  new_object_tools.c  object_tools.c  screen_manager.c  ui_anim.c  ui_anim_selector.c  ui_anim_toolbox.c  ui_anim_toolbox2.c  ui_apply_rotation.c  ui_cam_win.c  ui_camera_tab.c  ui_cluster.c  ui_csg.c  ui_cube.c  ui_edit_win.c  ui_file_win.c  ui_hook_file_mng.c  ui_hook_obj_mng.c  ui_hook_render.c  ui_lists.c  ui_menu.c  ui_objects.c  ui_render.c  (+7 more)
srcs/parser/: export.c  export_anim.c  export_anim_tools.c  export_csg.c  export_shape.c  export_toolbox.c  export_utils.c  obj_data.c  obj_name.c  parse_anim.c  parse_anim_tools.c  parse_cmp.c  parse_csg.c  parse_shape.c  parse_toolbox.c  parse_txt.c  parse_utils.c  parser.c  read.c  set_shape.c  setter.c
srcs/render/: camera.c  cast.c  filters.c  light.c  light_utils.c  normal_mapping.c  perlin.c  perlin_texture.c  perturbation.c  post_process.c  pre_render.c  render.c  render_fullscreen.c  render_toolbox.c  skybox.c  texture.c  texture_loader.c  texture_toolbox.c
srcs/render_utils/: error_sdl.c  exit_sdl.c  init_mthr_sdl.c  init_sdl.c  loop_sdl.c  post_process.c  render_mthr_sdl.c  render_pool.c  render_sdl.c  render_time.c  save_screenshot.c
srcs/tools/: animate.c  error.c  free.c  free2.c  free_node.c  free_scene.c  get_scenes.c  hook.c  list_toolbox.c  load_tools.c  record_frame.c  reload.c  update.c  utils.c
